# nornir-pyntc

./: .env.example  Dockerfile  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py  index.md  requirements.txt
docs/admin/: install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1_0.md  version_1_0_0.md  version_2_0.md  version_3.1.md  version_3_0.md
docs/dev/: contributing.md  dev_environment.md
docs/user/: lib_getting_started.md  lib_overview.md
nornir_pyntc/: __init__.py  cli.py  config.py  log.py
nornir_pyntc/connections/: __init__.py  pyntc.py  pyntc_connection.py
nornir_pyntc/tasks/: __init__.py  pyntc_check_file_exists.py  pyntc_config.py  pyntc_file_copy.py  pyntc_install_os.py  pyntc_reboot.py  pyntc_remote_file_copy.py  pyntc_save.py  pyntc_show.py  pyntc_show_list.py  pyntc_verify_file.py
tests/: __init__.py  conftest.py  test_basics.py
tests/inventory_data/: hosts.yaml
tests/unit/: conftest.py  test_basics.py  test_cli.py  test_connection.py  test_logging.py
tests/unit/tasks/: test_config.py  test_file_copy.py  test_install_os.py  test_pyntc_check_file_exists.py  test_pyntc_config.py  test_pyntc_file_copy.py  test_pyntc_install_os.py  test_pyntc_reboot.py  test_pyntc_save.py  test_pyntc_show.py  test_reboot.py  test_save.py  test_show.py  test_show_list.py
